infrastructure/bootstrap/infrastructure/signoz/controller/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz
  namespace: rig-system
  annotations:
    cert-manager.io/cluster-issuer: kind-ca-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: signoz.kind
      http:
        paths:
          - backend:
              service:
                name: signoz
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - signoz.kind
      secretName: signoz-tls
